--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="https://files.catbox.moe/71zdqu.jpg">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <script type='text/javascript' src='//pl26210875.effectiveratecpm.com/b4/c9/8d/b4c98d03467b12c0ba0b0411c8143d10.js'></script>
     
 </head>
 <body>
@@ -33,5 +34,6 @@
   </footer>
 
   <script src="script.js" type="module"></script>
+  <script type='text/javascript' src='//pl26211004.effectiveratecpm.com/d8/f0/19/d8f0195df12997952efdef7a2f9b55bc.js'></script>
 </body>
 </html>
